--- a/catalogo_app/templates/catalogo_app/catalogo.html
+++ b/catalogo_app/templates/catalogo_app/catalogo.html
@@ -1,17 +1,177 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Catálogo de Productos</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shopping Cart Js</title>
+    <link rel="stylesheet" href="{% static 'css/catalogo.css' %}">
+
+
+    
 </head>
 <body>
-    <h1>Catálogo de Productos</h1>
-    <nav>
-        <a href="{% url 'home' %}">Inicio</a> |
-        <a href="{% url 'login' %}">Login</a> |
-        <a href="{% url 'carrito' %}">Carrito</a> |
-        <a href="{% url 'catalogo' %}">Catálogo</a> |
-        <a href="{% url 'crud' %}">CRUD</a>
-    </nav>
+    <header>
+        <div class="header-section container">
+            <h1 style="font-size: 30px;">NANI</h1>
+            
+            <div>
+                <img onclick="showCart(this)" class="cart" src="img/icons8-carrito-de-compras.gif" alt="">
+                <p class="count-product">0</p>
+            </div>
+            <!-- <button onclick="redirectToCheckout()">Pagar</button> -->
+
+            <div class="cart-products" id="products-id">
+                <p class="close-btn" onclick="closeBtn()">X</p>
+                <h3>Mi carrito</h3>
+                <div class="card-items">
+                    <!-- <div class="item">
+                        <img src="./images/products/keyboard-1.jpg" alt="">
+                        <div class="item-content">
+                            <h5>name of product name of product name of product</h5>
+                            <h5 class="cart-price">45.50$</h5>
+                            <h6>Amount: 3</h6>
+                        </div>
+                        <span>X</span>
+                    </div>
+    
+                    <div class="item">
+                        <img src="./images/products/keyboard-1.jpg" alt="">
+                        <div class="item-content">
+                            <h5>name of product name of product name of product</h5>
+                            <h5 class="cart-price">45.50$</h5>
+                            <h6>Amount: 3</h6>
+                        </div>
+                        <span class="delete-product" data-id="">X</span>
+                    </div> -->
+                </div>
+                <h2>Total: $<strong class="price-total">0</strong></h2>
+            </div>
+        </div>
+    </header>
+    <section class="container">
+        <div class="products">
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+
+                    <p><span>30</span>$</p>
+                </div>
+                <p class="title">Auriculares con luces</p>
+                <a href="" data-id="1" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                
+                  
+                    <p><span>35</span>$</p>
+                </div>
+                <p class="title"> Microfono para streaming</p>
+                
+                <a href="" class="btn-add-cart" data-id="2">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>250</span>$</p>
+                </div>
+                <p class="title">Silla Gamer</p>
+                <a href="" data-id="3" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>15</span>$</p>
+                </div>
+                <p class="title"> Auriculares inalambricos</p>
+                <a href="" data-id="4" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>190</span>$</p>
+                </div>
+                <p class="title">Monitor SAMSUNG</p>
+                <a href="" data-id="5" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>10</span>$</p>
+                </div>
+                <p class="title"> Mouse gamer</p>
+                <a href="" data-id="6" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>230</span>$</p>
+                </div>
+                <p class="title"> Parlantes </p>
+                <a href="" data-id="7" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>50</span>$</p>
+                </div>
+                <p class="title">Teclado</p>
+                <a href="" data-id="8" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>30</span>$</p>
+                </div>
+                <p class="title">Teclado + Mouse </p>
+                <a href="" data-id="9" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>17.50</span>$</p>
+                </div>
+                <p class="title">Mini teclado</p>
+                <a href="" data-id="10" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>45</span>$</p>
+                </div>
+                <p class="title"> Smartwatch </p>
+                <a href="" data-id="11" class="btn-add-cart">add to cart</a>
+            </div>
+            <div class="carts">
+                <div>
+                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
+                    <p><span>700</span>$</p>
+                </div>
+                <p class="title"> Iphone 12 </p>
+                <a href="" data-id="11" class="btn-add-cart">add to cart</a>
+            </div>
+        </div>
+    </section>
+
+   
+
+    <script>
+        function showCart(x){
+            document.getElementById("products-id").style.display = "block";
+        }
+        function closeBtn(){
+             document.getElementById("products-id").style.display = "none";
+        }
+        function redirectToCheckout() {
+            window.location.href = "checkout.html";
+        }
+
+    </script>
+
+    <script src="{% static 'js/catalogo.js' %}"></script>
+
 </body>
 </html>
