--- a/login_app/templates/login_app/registro.html
+++ b/login_app/templates/login_app/registro.html
@@ -8,7 +8,7 @@
 <body>
     <h2>Registrarse</h2>
     
-    <form method="POST">
+    <form method="POST" action= "{% url 'registrarUser' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Crear Cuenta</button>
