--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,7 @@
                 <a class="text-sm font-medium hover:text-blue-600 transition-colors" href="#">Ofertas</a>
                 <a class="text-sm font-medium hover:text-blue-600 transition-colors" href="#">Soporte</a>
                 <a class="text-sm font-medium hover:text-blue-600 transition-colors" href="{% url 'login' %}">Iniciar Sesion</a>
+                <a class="text-sm font-medium hover:text-blue-600 transition-colors" href="{% url 'ver_carrito' %}">carrito pa</a>
             </nav>
          
             <button class="ml-2 p-2 md:hidden">
