--- a/login_app/templates/login_app/login.html
+++ b/login_app/templates/login_app/login.html
@@ -18,7 +18,7 @@
     {% endif %}
     
     <!-- Formulario de login -->
-    <form method="POST">
+    <form method="POST" action="{% url 'verificarUsuario' %}">
         {% csrf_token %}
         <label for="username">Usuario:</label>
         <input type="text" name="username" required><br>
