error registrarse arreglado

--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
 
           {% else %}
           <a
-            class="text-sm font-medium hover:text-blue-600 transition-colors"
+            class="text-sm font-medium hover:text-blue-600 gittransition-colors"
             href="{% url 'login' %}"
             >Iniciar Sesión</a
           >
