--- a/static/css/registro.css
+++ b/static/css/registro.css
@@ -8,8 +8,8 @@ body {
     background-color: #f5f7fa;
 }
 
-.login-container {
-    width: 320px;
+.registro-container {
+    width: 500px; 
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
@@ -17,14 +17,16 @@ body {
     text-align: center;
 }
 
-.login-container h2 {
+/* Estilo de título */
+.registro-container h2 {
     font-size: 24px;
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
 }
 
-.login-container label {
+/* Etiquetas de los formularios */
+.registro-container label {
     display: block;
     font-size: 14px;
     color: #333;
@@ -33,7 +35,8 @@ body {
     padding-left: 5px;
 }
 
-.login-container input {
+/* Estilo para los campos de entrada */
+.registro-container input {
     width: 100%;
     padding: 10px;
     margin: 10px 0 15px;
@@ -43,7 +46,8 @@ body {
     box-sizing: border-box;
 }
 
-.login-container button {
+/* Estilo del botón */
+.registro-container button {
     width: 100%;
     padding: 10px;
     background-color: #0066ff;
@@ -56,27 +60,30 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.login-container button:hover {
+.registro-container button:hover {
     background-color: #0052cc;
 }
 
-.login-container a {
+/* Estilos para los enlaces */
+.registro-container a {
     color: #0066ff;
     font-size: 14px;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
-.login-container a:hover {
+.registro-container a:hover {
     color: #0052cc;
 }
 
-.login-container .links {
-    margin-top: 100px; 
+/* Enlaces al final */
+.registro-container .links {
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
 }
 
-.login-container form {
+/* Espacio del formulario */
+.registro-container form {
     margin-bottom: 20px;
 }
