--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,8 +11,17 @@
       {% if user.is_authenticated %}
         <a class="text-sm font-medium hover:text-blue-600 transition-colors" href="{% url 'ver_carrito' %}">Carrito</a>
 
+        {% if user.is_superuser %}
+        <a href="/admin/" 
+           class="text-sm font-medium hover:text-blue-600 transition-colors">
+           Panel de Administración
+        </a>
+        {% endif %}
+        
         <a href="#" onclick="document.getElementById('logout-form').submit(); return false;" class="text-sm font-medium hover:text-blue-600 transition-colors">Cerrar Sesión</a>
         
+        
+
         <form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
           {% csrf_token %}
         </form>
