--- a/static/css/login.css
+++ b/static/css/login.css
@@ -20,7 +20,7 @@ body {
 .login-container h2 {
     font-size: 24px;
     font-weight: bold;
-    color: #333;
+    color: #0052cc;
     margin-bottom: 20px;
 }
 
