--- a/carrito_app/templates/carrito_app/ver_orden.html
+++ b/carrito_app/templates/carrito_app/ver_orden.html
@@ -7,6 +7,7 @@
     <title>Orden Final</title>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container mx-auto px-4 py-8">
       <h1 class="text-2xl font-bold mb-6">Resumen de tu Orden</h1>
 
@@ -32,7 +33,7 @@
             type="submit"
             name="accion"
             value="cancelar"
-            class="bg-red-600 text-white py-2 px-4 rounded hover:bg-red-700"
+            class="bg-transparent border-2 border-red-600 text-red-600 py-2 px-4 rounded hover:bg-red-600 hover:text-white"
           >
             Cancelar Compra
           </button>
