--- a/catalogo_app/templates/catalogo_app/catalogo.html
+++ b/catalogo_app/templates/catalogo_app/catalogo.html
@@ -1,74 +1,62 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg"
-    />
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Catalogo</title>
-  </head>
+</head>
 
-  <body>
+<body>
     {% include 'nav.html' %}
     <div class="flex">
-      <aside class="hidden md:block w-64 bg-white p-6">
-        <h2 class="font-bold text-lg mb-4">Categorías</h2>
-        <ul>
-          {% for categoria in categorias %}
-          <li class="cursor-pointer p-2 hover:bg-gray-100">
-            <a href="{% url 'productCat' categoria.id %}">{{ categoria.nombre }}</a>
-          </li>
-          {% endfor %}
-          <li class="cursor-pointer p-2 hover:bg-gray-100">
-            <a href="{% url 'catalogo' %}">Todos los Productos</a>
-          </li>
-        </ul>
-      </aside>
+        <aside class="hidden md:block w-64 bg-white p-6">
+            <h2 class="font-bold text-lg mb-4">Categorías</h2>
+            <ul>
+                {% for categoria in categorias %}
+                <li class="cursor-pointer p-2 hover:bg-gray-100">
+                    <a href="{% url 'productCat' categoria.id %}">{{ categoria.nombre }}</a>
+                </li>
+                {% endfor %}
+                <li class="cursor-pointer p-2 hover:bg-gray-100">
+                    <a href="{% url 'catalogo' %}">Todos los Productos</a>
+                </li>
+            </ul>
+        </aside>
 
-      <main class="flex-1 p-6">
-        <h2 class="text-2xl font-bold mb-6">Productos</h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-          {% for producto in productos %}
-          <div class="bg-white rounded-lg shadow-md overflow-hidden">
-            <!-- Verificar si el producto tiene una imagen -->
-            {% if producto.imagen %}
-              <img
-                src="{{ producto.imagen.url }}"
-                alt="{{ producto.nombre }}"
-                class="w-full h-48 object-cover"
-              />
-            {% else %}
-              <img
-                src="{% static 'images/default-product-image.jpg' %}"
-                alt="Imagen por defecto"
-                class="w-full h-48 object-cover"
-              />
-            {% endif %}
-            
-            <div class="p-4">
-              <h3 class="font-bold text-lg mb-2">{{ producto.nombre }}</h3>
-              <p class="text-gray-600">{{ producto.categoria }}</p>
-              <p class="text-blue-600 font-bold mt-2 mb-4">${{ producto.precio }}</p>
-              <a
-                href="{% url 'agregar_al_carrito' producto.id %}"
-                class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 text-center mt-1"
-              >
-                Añadir al carrito
-              </a>
+        <main class="flex-1 p-6">
+            <h2 class="text-2xl font-bold mb-6">Productos</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                {% for producto in productos %}
+                <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                    <!-- Verificar si el producto tiene una imagen -->
+                    {% if producto.imagen %}
+                    <div class="w-full h-48 overflow-hidden">
+                        <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" class="w-full h-full object-cover" />
+                    </div>
+                    {% else %}
+                    <div class="w-full h-full overflow-hidden">
+                        <img src="{% static 'images/default-product-image.jpg' %}" alt="Imagen por defecto" class="w-full h-full object-cover" />
+                    </div>
+                    {% endif %}
+
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">{{ producto.nombre }}</h3>
+                        <p class="text-gray-600">{{ producto.categoria }}</p>
+                        <p class="text-blue-600 font-bold mt-2 mb-4">${{ producto.precio }}</p>
+                        <a href="{% url 'agregar_al_carrito' producto.id %}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 text-center mt-1">
+                            Añadir al carrito
+                        </a>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
-            
-          
-        
-        </div>
-          {% endfor %}
-        </div>
-      </main>
+        </main>
     </div>
-  </body>
+</body>
+
 </html>
