fix: cambios en vista ver_orden

--- a/carrito_app/templates/carrito_app/ver_orden.html
+++ b/carrito_app/templates/carrito_app/ver_orden.html
@@ -23,7 +23,7 @@
         </h1>
 
         <!-- Progress indicator -->
-        <div class="flex items-center justify-center mb-8">
+        <div class="flex flex-col items-start space-y-3 sm:space-y-0 sm:flex-row sm:items-center justify-center mb-8">
           <div class="flex items-center text-green-600">
             <span
               class="h-10 w-10 bg-green-600 rounded-full flex items-center justify-center text-white font-bold"
@@ -42,7 +42,7 @@
             <span class="ml-2 font-medium">Detalles</span>
           </div>
           <div class="flex-1 h-1 mx-4 bg-green-600"></div>
-          <div class="flex items-center text-green-600">
+          <div class="flex items-center text-green-600 ml-10 sm:ml-0">
             <span
               class="h-10 w-10 bg-green-600 rounded-full flex items-center justify-center text-white font-bold"
               >3</span
